# miniimage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  common.h
App/: CMakeLists.txt  app.cpp
FeatureExtractorDLL/: CMakeLists.txt
FeatureExtractorDLL/include/: feature_extract.h
FeatureExtractorDLL/src/: feature_extract.cpp
ImageLoaderDLL/: CMakeLists.txt
ImageLoaderDLL/src/: image_loader.cpp
IndexerDLL/include/: indexer.h
IndexerDLL/src/: indexer.cpp
MiniImageRetrieval/: CHANGELOG.md  launch.bat  launch.ps1
MiniImageRetrieval/ImageLoaderDLL/include/: image_loader.h
MiniImageRetrieval/IndexerDLL/: CMakeLists.txt
MiniImageRetrieval/SearcherDLL/include/: searcher.h
MiniImageRetrieval/SearcherDLL/src/: searcher.cpp
SearcherDLL/: CMakeLists.txt
